; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/wbemprox/extr_query.c_destroy_view.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/wbemprox/extr_query.c_destroy_view.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.view = type { %struct.view*, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @destroy_view(%struct.view* %0) #0 {
  %2 = alloca %struct.view*, align 8
  store %struct.view* %0, %struct.view** %2, align 8
  %3 = load %struct.view*, %struct.view** %2, align 8
  %4 = icmp ne %struct.view* %3, null
  br i1 %4, label %6, label %5

5:                                                ; preds = %1
  br label %23

6:                                                ; preds = %1
  %7 = load %struct.view*, %struct.view** %2, align 8
  %8 = getelementptr inbounds %struct.view, %struct.view* %7, i32 0, i32 1
  %9 = load i64, i64* %8, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %16

11:                                               ; preds = %6
  %12 = load %struct.view*, %struct.view** %2, align 8
  %13 = getelementptr inbounds %struct.view, %struct.view* %12, i32 0, i32 1
  %14 = load i64, i64* %13, align 8
  %15 = call i32 @release_table(i64 %14)
  br label %16

16:                                               ; preds = %11, %6
  %17 = load %struct.view*, %struct.view** %2, align 8
  %18 = getelementptr inbounds %struct.view, %struct.view* %17, i32 0, i32 0
  %19 = load %struct.view*, %struct.view** %18, align 8
  %20 = call i32 @heap_free(%struct.view* %19)
  %21 = load %struct.view*, %struct.view** %2, align 8
  %22 = call i32 @heap_free(%struct.view* %21)
  br label %23

23:                                               ; preds = %16, %5
  ret void
}

declare dso_local i32 @release_table(i64) #1

declare dso_local i32 @heap_free(%struct.view*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
